force-app/main/default/objects/StoreDailyCustomerNumber__c/StoreDailyCustomerNumber__c.object-meta.xml
<CustomObject>
    <description>Object containing for each store daily customer attendance (1 record is created by store and day)</description>
    <label>Statistique journalière</label>
    <nameField>
        <displayFormat>DS{00000}</displayFormat>
        <label>Store daily stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistiques journalière</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>