force-app/main/default/objects/StoreDailyCustomerNumber__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Store concerned by the daily stats</description>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store daily stats</relationshipLabel>
    <relationshipName>StoreDailyCustomerNumbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>