force-app/main/default/objects/StoreDailyCustomerNumber__c/fields/CurrentCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CurrentCustomerNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of customer currently present at the store</description>
    <label>Current number of customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>