force-app/main/default/objects/StoreDailyCustomerNumber__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of the attendance stats</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>