force-app/main/default/objects/StoreDailyCustomerNumber__c/fields/MaxCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>MaxCustomerNumber__c</fullName>
    <description>Highest number of customer present at same time at the store for the day</description>
    <label>Max number of the day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>